--- a/tampilan/index.html
+++ b/tampilan/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <div class="nav">
       <i class="bi bi-list"></i>
     </div>
-    <div class="tampillog">
+    <div class="tampillog hidden">
       <i class="bi bi-x-lg coki"></i>
        <div class="awkoakwok">
 
